--- a/wlcm/pubspec.yaml
+++ b/wlcm/pubspec.yaml
@@ -55,6 +55,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+     - assets/icons/
+     - assets/images/
      - images/doctor.png
      - images/doctor1.png
      - images/patient.png
@@ -78,6 +80,26 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
+      - family: MyFlutterApp
+      fonts:
+        - asset: assets/fonts/Poppins/MyFlutterApp.ttf
+    
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins/Poppins-Regular.ttf
+        - asset: assets/fonts/Poppins/Poppins-Medium.ttf
+        - asset: assets/fonts/Poppins/Poppins-Bold.ttf
+
+    
+    - family: Comfortaa
+      fonts:
+        - asset: assets/fonts/Comfortaa/Comfortaa-Regular.ttf
+        - asset: assets/fonts/Comfortaa/Comfortaa-Medium.ttf
+        - asset: assets/fonts/Comfortaa/Comfortaa-Bold.ttf
+
+    - family: DidactGothic
+      fonts:
+       - asset: assets/fonts/DidactGothic/DidactGothic-Regular.ttf
      - family: Comfortaa
        fonts:
          - asset: fonts/Comfortaa-Regular.ttf
